update endpints and swagger for v1
