# apps/api/src/asset.controller.ts
@@ -1,0 +1,40 @@
+import { Controller, HttpCode, HttpStatus, Logger, ParseFilePipeBuilder, Put, UploadedFiles, UseInterceptors } from '@nestjs/common';
+import { FilesInterceptor } from '@nestjs/platform-express';
+import { ApiBody, ApiConsumes, ApiTags } from '@nestjs/swagger';
+import { ApiService } from './api.service';
+import { DSNP_VALID_MIME_TYPES, FilesUploadDto, UploadResponseDto } from '../../../libs/common/src';
+
+@Controller('v1/asset')
+@ApiTags('asset')
+export class AssetController {
+  private readonly logger: Logger;
+
+  constructor(private apiService: ApiService) {
+    this.logger = new Logger(this.constructor.name);
+  }
+
+  @Put('upload')
+  @UseInterceptors(FilesInterceptor('files'))
+  @HttpCode(202)
+  @ApiConsumes('multipart/form-data')
+  @ApiBody({
+    description: 'Asset files',
+    type: FilesUploadDto,
+  })
+  async assetUpload(
+    @UploadedFiles(
+      new ParseFilePipeBuilder()
+        .addFileTypeValidator({
+          fileType: DSNP_VALID_MIME_TYPES,
+        })
+        // TODO: add a validator to check overall uploaded size
+        .build({
+          errorHttpStatusCode: HttpStatus.UNPROCESSABLE_ENTITY,
+        }),
+    )
+    files: // eslint-disable-next-line no-undef
+    Express.Multer.File[],
+  ): Promise<UploadResponseDto> {
+    return this.apiService.addAssets(files);
+  }
+}
