# swagger.yaml
@@ -1,15 +1,13 @@
 openapi: 3.0.0
 paths:
-  "/api/health":
+  "/v1/health":
     get:
-      operationId: ApiController_health
       parameters: []
       responses:
         '200':
           description: ''
-  "/api/asset/upload":
+  "/v1/asset/upload":
     put:
-      operationId: ApiController_assetUpload
       parameters: []
       requestBody:
         required: true
@@ -25,9 +23,8 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/UploadResponseDto"
-  "/api/content/{userDsnpId}/broadcast":
+  "/v1/content/{userDsnpId}/broadcast":
     post:
-      operationId: ApiController_broadcast
       parameters:
       - name: userDsnpId
         required: true
@@ -47,9 +44,8 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/AnnouncementResponseDto"
-  "/api/content/{userDsnpId}/reply":
+  "/v1/content/{userDsnpId}/reply":
     post:
-      operationId: ApiController_reply
       parameters:
       - name: userDsnpId
         required: true
@@ -69,9 +65,8 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/AnnouncementResponseDto"
-  "/api/content/{userDsnpId}/reaction":
+  "/v1/content/{userDsnpId}/reaction":
     post:
-      operationId: ApiController_reaction
       parameters:
       - name: userDsnpId
         required: true
@@ -91,9 +86,8 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/AnnouncementResponseDto"
-  "/api/content/{userDsnpId}":
+  "/v1/content/{userDsnpId}":
     put:
-      operationId: ApiController_update
       parameters:
       - name: userDsnpId
         required: true
@@ -114,7 +108,6 @@ paths:
               schema:
                 "$ref": "#/components/schemas/AnnouncementResponseDto"
     delete:
-      operationId: ApiController_delete
       parameters:
       - name: userDsnpId
         required: true
@@ -134,9 +127,8 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/AnnouncementResponseDto"
-  "/api/profile/{userDsnpId}":
+  "/v1/profile/{userDsnpId}":
     put:
-      operationId: ApiController_profile
       parameters:
       - name: userDsnpId
         required: true
